# clox

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  chunk.c  chunk.h  cmake_install.cmake  common.h  compile_commands.json  compiler.c  compiler.h  debug.c  format.sh  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
.cache/clangd/index/: chunk.c.ACDBE934A810EED2.idx  chunk.h.406107E3EDCD8F5E.idx  common.h.E6F344D7B1DABBB1.idx  debug.c.44E23F3241A612B5.idx  debug.h.B6965DEC87E03FC5.idx  main.c.3E350D4680A64164.idx  memory.c.87D2D05686A2DCE4.idx  memory.h.A7B6295105488069.idx  value.c.F8B9A3C792E4CBE7.idx  value.h.7FA4B519526F69DA.idx
doc/: Calls-and-Functions.md  Chunks-of-Bytecode.md  Classes-and-Instances.md  Closure.md  Compiling-Expressions.md  Garbage-Collection.md  Global-Variables.md  Hash-Tables.md  Jumping-Back-and-Forth.md  Local-Variable.md  Methods-and-Initializers.md  Superclasses.md  Types-of-Values.md  Virtual-Machine.md  scan-on-demand.md
include/: chunk.h  common.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  main.c  object.c  scanner.c  table.c  value.c  vm.c
